# defaultersapp

./: README.md  package-lock.json  package.json  postcss.config.js  tailwind.config.js
backend/: .gitignore  config.py  pyproject.toml  requirements.txt  scripts.py  wsgi.py
backend/application/: __init__.py  exceptions.py  models.py  schema.py  utils.py
backend/application/blueprints/: defaulters.py  members.py  session.py
backend/migrations/versions/: 0486459b49bb_.py  1e602f205425_.py  2e3e3e5f5af5_.py  3f7e750509a0_.py  b6c2f79f51c0_.py
backend/tests/: conftest.py  test_models.py  test_views.py
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.js  api.js  appReducer.js  index.js  layout.css
frontend/src/components/add-defaulter-container/: add-defaulter-container.jsx  add-defaulter.module.css
frontend/src/components/button/: button.jsx  button.module.css
frontend/src/components/defaulterList/: defaultList.jsx  defaulterItem.jsx  defaulterItem.module.css  defaulterList.module.css
frontend/src/components/errorNotice/: error.jsx  errorNotice.module.css
frontend/src/components/forms/: addDefaulterForm.jsx  form.module.css  textInput.jsx  updateDefaulterForm.jsx
frontend/src/components/head/: head.jsx
frontend/src/components/layout/: layout.jsx  layout.module.css
frontend/src/components/modal/: addDefaulterModal.jsx  modal.jsx  (+1 more)
frontend/src/config/: index.js
frontend/src/routes/: routes.jsx
frontend/src/store/: auth.jsx  useFetch.js
frontend/src/utils/: authAxios.js  fetcher.js
public/: index.html
(+21 files in other folders)
